@@ -15,14 +15,15 @@ Notable features include:
 - Supports SSL encryption for the entire iRODS connection.
 - Easy to configure using Apache configuration directives.
 - Supports an anonymous access mode for password-less public access.
+- Supports themeable directory listings for read-only web browser access.
 - Supports iRODS server versions 4+ and is backwards compatible with 3.3.1.
 
 ## Download ##
 
 There are currently two supported Davrods versions:
 
-- [`davrods-4.1_1.2.0`](https://github.com/UtrechtUniversity/davrods/releases/tag/4.1_1.2.0), branch `irods-4.1-libs`
-- [`davrods-4.2.1_1.2.0`](https://github.com/UtrechtUniversity/davrods/releases/tag/4.2.1_1.2.0), branch `master`
+- [`davrods-4.1_1.3.0`](https://github.com/UtrechtUniversity/davrods/releases/tag/4.1_1.3.0), branch `irods-4.1-libs`
+- [`davrods-4.2.1_1.3.0`](https://github.com/UtrechtUniversity/davrods/releases/tag/4.2.1_1.3.0), branch `master`
 
 The left side of the version number indicates the version of the iRODS
 client libraries that Davrods uses.
@@ -33,9 +34,9 @@ versions listed above will work with either iRODS server version.
 
 ## Installation ##
 
-This section describes the installation steps for `davrods-4.2.1_1.2.0`.
+This section describes the installation steps for `davrods-4.2.1_1.3.0`.
 
-To view instructions for `davrods-4.1_1.2.0`, switch to the
+To view instructions for `davrods-4.1_1.3.0`, switch to the
 [`irods-4.1-libs`](https://github.com/UtrechtUniversity/davrods/tree/irods-4.1-libs)
 branch.
 
@@ -46,12 +47,12 @@ distributed at https://packages.irods.org/
 
 After following the instructions for adding the iRODS repository to your
 package manager at the link above, Davrods can be installed as a binary
-package using the RPM on the [releases page](https://github.com/UtrechtUniversity/davrods/releases/tag/4.2.1_1.2.0).
+package using the RPM on the [releases page](https://github.com/UtrechtUniversity/davrods/releases/tag/4.2.1_1.3.0).
 
 Download the Davrods package for your platform and install it using your
 package manager, for example:
 
-    yum install davrods-4.2.1_1.2.0-1.rpm
+    yum install davrods-4.2.1_1.3.0-1.rpm
 
 We currently distribute RPM packages for CentOS 7 only.
 If you require packaging for a different platform, please contact us
